[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "phomemo_m02s"
authors = [{name = "Alethea Flowers", email = "thea@winterbloom.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
    "pyserial",
    "Pillow"
]

[project.urls]
Home = "https://github.com/theacodes/phomemo_m02s"
